# gcode-editor-rs

./: .gitignore  Cargo.toml  README.md  Trunk.toml
.github/workflows/: ci.yml
examples/: WEB_EDITOR_README.md  error_demo.rs  screenshot_generator.rs  simple_editor.rs  web_editor.rs
examples/gcode/: README.md  axis_examples.gcode  combined_examples.gcode  comments_examples.gcode  numbers_examples.gcode  ocodes_examples.gcode  parameter_examples.gcode  variables_examples.gcode
scripts/: generate_screenshots.sh
src/: lib.rs
webinterface/: index.html
