[package]
name = "gcode_editor"
version = "1.0.0"
edition = "2021"
description = "A G-code highlighter and editor widget for egui"
license = "Apache-2.0"
repository = "https://github.com/ulikoehler/gcode-editor-rs"

[lib]
name = "gcode_editor"
path = "src/lib.rs"

[dependencies]
egui = "0.34"
eframe = { version = "0.34", optional = true }

[dev-dependencies]
eframe = "0.34"
egui_kittest = { version = "0.34", features = ["wgpu", "snapshot"] }
image = "0.25"
console_error_panic_hook = "0.1"
wasm-bindgen-futures = "0.4"

[features]
default = []
with_eframe = ["eframe"]
